--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
 
@@ -109,7 +109,7 @@
 
        
 
-        <h2>Vuoi lavorare con me? <br>Conosciamovi meglio!</h2>
+        <h2>Conosciamoci meglio!</h2>
 
 
         <!-- FORM -->
